--- a/small_problems/encryption.ipynb
+++ b/small_problems/encryption.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "124453423092313603592069"
+       "612543075755363103845981"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,6 +40,42 @@
     "    encrypted: int = original_key ^ dummy\n",
     "    return dummy,encrypted\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "k1: 67686623282171345612346762713680215471694329821494971419694183771\n",
+      "k2: 85927925333900033933208015590343993013924110156237103521493013114\n",
+      "result: this is a one time padding!\n"
+     ]
+    }
+   ],
+   "source": [
+    "def decrypt(k1:int , k2:int)-> str:\n",
+    "    decrypted : int = k1 ^ k2\n",
+    "    temp : bytes = decrypted.to_bytes((decrypted.bit_length() + 7 )// 8 , 'big')\n",
+    "    return temp.decode()\n",
+    "    # we have to add 7 before using int div to avoid off-by-one bit error \n",
+    "\n",
+    "k1,k2 = encrypt('this is a one time padding!')\n",
+    "result: str = decrypt(k1,k2)\n",
+    "print(f'k1: {k1}')\n",
+    "print(f'k2: {k2}')\n",
+    "print(f'result: {result}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
